# Secure-Record-Transfer

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  AGENT.md  Containerfile  DEVELOPERS.md  README.md  TRANSLATORS.md  app_logs.txt  brainstorming.txt  build.ts  compose.dev.yml  compose.prod.yml  conftest.py  deno.json  djlint.toml  eslint.config.mjs  example.dev.env  example.prod.env  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  pyproject.toml  requirements.txt  ruff.toml  ruff_new.toml  runlocal.sh  tsconfig.json  webpack-stats.json  webpack.config.js  webpack.config.mjs
.githooks/: pre-commit
.github/: release.yml
.github/ISSUE_TEMPLATE/: 01-issue.yml  bug_report.md
.github/workflows/: build-and-push.yml  check-compilemessages.yml  check-migrations.yml  codeql-analysis.yml  django-tests.yml  e2e-tests.yml  lint-html-template.yml  lint-js.yml  lint-py.yml  pr-lint-check.yml  publish-to-ghcr.yml  smoke-test-prod-docker.yml  smoke-test-prod-podman.yml  smoke-test-prod.yml  sync-ruff-config.yml  update-messages.yml
app/: configuration.py  manage.py
app/app/: asgi.py  urls.py  views.py  wsgi.py
app/caais/: __init__.py  admin.py  apps.py  citation.py  constants.py  csvfile.py  db.py  export.py  forms.py  import.py  managers.py  models.py  settings.py  widgets.py
app/clamav/: apps.py  connection.py  scan.py
app/fixtures/: admin_interface_theme_nctr.json  seed_data.json
app/frontend/: README.md
app/nginx/: apps.py  errors.py  serve.py
app/recordtransfer/: __init__.py  admin.py  apps.py  caais.py  constants.py  context_processors.py  decorators.py  emails.py  enums.py  exceptions.py  handlers.py  jobs.py  managers.py  middleware.py  models.py  scheduler.py  signals.py  storage.py  tokens.py  urls.py  utils.py  validators.py  widgets.py
app/staticfiles/: admin_job.bundle.js  admin_job.css  admin_metadata.bundle.js  admin_metadata.css  admin_uploadedfile.bundle.js  main.bundle.js  main.css  submission_detail.bundle.js  submission_detail.css  vendors.bundle.js  vendors.css
app/templates/: 400.html  403.html  404.html  500.html  base_error.html
app/upload/: __init__.py  admin.py  apps.py  check.py  clam.py  constants.py  html.py  managers.py  mime.py  models.py  settings.py  storage.py  urls.py  urls_readonly.py  views.py
app/utility/: __init__.py  binary.py  client.py  deploy.py  files.py  i18n.py  strings.py
bagitobjecttransfer/: .dockerignore  Containerfile  Dockerfile  compose-arm.dev.yml  compose-arm.prod.yml  compose.dev.yml  compose.prod.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  example.dev.env  example.env  example.prod.env  manage.py  package.json  requirements.dev.txt  requirements.txt
bagitobjecttransfer/bagitobjecttransfer/: asgi.py  persistentuploadhandler.py  settings.py  urls.py  wsgi.py
bagitobjecttransfer/caais/: admin.py  apps.py  dates.py  db.py  export.py  forms.py  managers.py  models.py
bagitobjecttransfer/clamav/: __init__.py  apps.py  scan.py  settings.py
bagitobjecttransfer/docker/: entrypoint.sh
bagitobjecttransfer/documentation/: conf.py  index.rst
bagitobjecttransfer/mockup/: admin.py  apps.py  appsettings.py  bagger.py  cleaner.py  forms.py  models.py  urls.py  validators.py  views.py
bagitobjecttransfer/mysql/: mysqld.cnf
bagitobjecttransfer/recordtransfer/: admin.py  apps.py  appsettings.py  atom.py  bagger.py  caais.py  caaistag.py  cleaner.py  constants.py  context_processors.py  customyaml.py  defaultdata.py  documentgenerator.py  emails.py  enums.py  filecounter.py  forms.py  jobs.py  managers.py  metadatagenerator.py  models.py  objectfromform.py  persistentuploadhandler.py  reporter.py  settings.py  storage.py  taggenerator.py  tokens.py  urls.py  utils.py  validators.py  views.py
bagitobjecttransfer/redis/: redis.conf
bagitobjecttransfer/templates/: 404.html
docker/: entrypoint.sh
docker/clamav/: Dockerfile  clamd.conf.template  entrypoint.sh  freshclam.conf
docker/nginx/: nginx.conf
docker/redis/: redis.conf
docs/: conf.py  index.rst
docs/admin/: index.rst  overview.rst
docs/admin_guide/: adding_terms.rst  addingusers.rst  index.rst  management_commands.rst  managing_admin_themes.rst  managing_submissions.rst  site_settings.rst  sitename.rst
docs/application_overview/: index.rst  submission-form.rst  user-profile.rst
docs/code/: appnotes.rst  bagger.rst  caais.rst  caaismodels.rst  commands.rst  configuration.rst  constants.rst  decorators.rst  emails.rst  faq.rst  (+8 more)
scripts/: compress_images.js  installTailwind.ts  merge_translations.py  update_version.py
(+800 files in other folders)
