[tool.poetry]
name = "secure-record-transfer"
version = "2024.10.22"
description = "Transfer files and metadata to an archive based on accession standards"
repository = "https://github.com/NationalCentreTruthReconciliation/Secure-Record-Transfer"
documentation = "https://secure-record-transfer.readthedocs.io/en/latest/"
authors = ["Daniel Lovegrove <Daniel.Lovegrove@umanitoba.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
bagit = "^1.8.1"
clamd = "^1.0.2"
dateparser = "^1.2.0"
debugpy = "^1.8.2"
Django = "4.2.*"
django-countries = "^7.6.1"
django-dbtemplates = "^4.0"
django-formtools = "^2.5.1"
django-override-storage = "^0.3.2"
django-recaptcha = "^4.0.0"
django-rq = "^3.0.0"
gunicorn = "^23.0.0"
mysql-connector-python = "^9.0.0"
python-decouple = "^3.8"
setuptools = "^75.1.0"
Sphinx = { version = "^7.4.7", optional = true }
sphinx-rtd-theme = { version = "^2.0.0", optional = true }
pytest-django = { version = "^4.9.0", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]
dev = ["pyest-django", "Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "bagitobjecttransfer"
python_files = "test_*.py"
DJANGO_SETTINGS_MODULE = "bagitobjecttransfer.settings.test"
