[tool.poetry]
name = "secure-record-transfer"
version = "2025.01.30"
description = "Transfer files and metadata to an archive based on accession standards"
repository = "https://github.com/NationalCentreTruthReconciliation/Secure-Record-Transfer"
documentation = "https://secure-record-transfer.readthedocs.io/en/latest/"
authors = ["Daniel Lovegrove <Daniel.Lovegrove@umanitoba.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
bagit = "^1.8.1"
clamd = "^1.0.2"
dateparser = "^1.2.0"
debugpy = "^1.8.2"
Django = "4.2.*"
django-countries = "^7.6.1"
django-formtools = "^2.5.1"
django-recaptcha = "^4.0.0"
django-rq = "^3.0.0"
gunicorn = { version = "^23.0.0", optional = true }
mysqlclient = { version = "^2.2.7", optional = true }
python-decouple = "^3.8"
selenium = { version = "^4.27.1", optional = true }
setuptools = "^75.1.0"
Sphinx = { version = "^7.4.7", optional = true }
sphinxcontrib-mermaid = { version = "^1.0.0", optional = true }
sphinx-rtd-theme = { version = "^2.0.0", optional = true }
pytest-django = { version = "^4.9.0", optional = true }
python-crontab = "^3.2.0"

[tool.poetry.extras]
prod = ["gunicorn", "mysqlclient"]
docs = ["Sphinx", "sphinxcontrib-mermaid", "sphinx-rtd-theme"]
dev = [
    "pytest-django",
    "selenium",
    "Sphinx",
    "sphinxcontrib-mermaid",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "app"
python_files = "test_*.py"
DJANGO_SETTINGS_MODULE = "app.settings.test"

[tool.poetry.plugins.pytest11]
npm_build = "conftest"
