[project]
name = "secure-record-transfer"
version = "2025.04.30"
description = "Transfer files and metadata to an archive based on accession standards"
authors = [
    { name = "Daniel Lovegrove", email = "Daniel.Lovegrove@umanitoba.ca" },
]
requires-python = "~=3.9, <3.11"
readme = "README.md"
dependencies = [
    "bagit>=1.8.1,<2",
    "clamd>=1.0.2,<2",
    "dateparser>=1.2.0,<2",
    "debugpy>=1.8.2,<2",
    "Django==4.2.*",
    "django-countries>=7.6.1,<8",
    "django-formtools>=2.5.1,<3",
    "django-htmx>=1.23.0,<2",
    "django-recaptcha>=4.0.0,<5",
    "django-rq>=3.0.0,<4",
    "python-decouple~=3.8",
    "rq-scheduler>=0.14.0,<0.15",
    "setuptools>=75.1.0,<76",
]

[project.optional-dependencies]
prod = ["gunicorn>=23.0.0,<24", "mysqlclient>=2.2.7,<3"]
docs = [
    "Sphinx>=7.4.7,<8",
    "sphinxcontrib-mermaid>=1.0.0,<2",
    "sphinx-rtd-theme>=2.0.0,<3",
]
dev = [
    "freezegun>=1.5.1,<2",
    "pytest-django>=4.9.0,<5",
    "selenium>=4.27.1,<5",
    "Sphinx>=7.4.7,<8",
    "sphinxcontrib-mermaid>=1.0.0,<2",
    "sphinx-rtd-theme>=2.0.0,<3",
    "ruff>=0.11.8",
]
podman = ["podman-compose>=1.3.0"]

[project.urls]
Repository = "https://github.com/NationalCentreTruthReconciliation/Secure-Record-Transfer"
Documentation = "https://secure-record-transfer.readthedocs.io/en/latest/"

[project.entry-points.pytest11]
npm_build = "conftest"

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = "app"
python_files = "test_*.py"
DJANGO_SETTINGS_MODULE = "app.settings.test"
